# HackatonP3

./: .gitignore  README.md
backend/: .env.example  README.md  activate.bat  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  cache.py  data.py  deduplicate.py  normalize.py  translation.py
backend/app/db/: __init__.py
backend/app/services/: agent.py  cache_warmer.py  db.py  matcher.py  normalize.py  translator.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/the-agent/: page.tsx
frontend/app/the-problem/: page.tsx
frontend/components/: AgentTrace.tsx  CacheStatsUI.tsx  CacheWarmupUI.tsx  CodeSpotlight.tsx  ConfidenceBar.tsx  DataFlowStepper.tsx  DecisionTree.tsx  DeduplicateUI.tsx  EndpointCard.tsx  Footer.tsx  LayerPipeline.tsx  MatchTypeBadge.tsx  MethodBadge.tsx  Navbar.tsx  ResponsePanel.tsx
