[project]
name = "hackaton-backend"
version = "0.1.0"
description = "Backend for hackaton"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyascii>=0.3.3",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "levenshtein>=0.27.3",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-levenshtein",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
